# TensorRT-NCCL-Inference-Bench

./: CMakeLists.txt  Dockerfile  README.md
configs/: engine_config.json
include/: calibrator.hpp  common.hpp  nccl_utils.hpp  trt_runner.hpp
scripts/: bench_multi_gpu.sh  bench_single_gpu.sh  build.sh  build_trt_engine.py  export_onnx_resnet50.py  profile_nsight.sh
src/: main.cpp  nccl_utils.cpp  trt_runner.cpp
